fix overflow-y on trackerlist in subview for long lists

--- a/css/_mixins.scss
+++ b/css/_mixins.scss
@@ -133,10 +133,12 @@
         &.sliding-subview--has-fixed-header {
             padding: 49px 0 0 0;
             width: $popup__width; /* 270px - 14*2 */
+            margin-bottom: 28px;
         }
 
         .sliding-subview__header {
-            position: absolute;
+            z-index: 10;
+            position: fixed;
             top: 0;
             left: 0;
             right: 0;
